tests/miz/fail/substitution/fail_substitution_malformed_001.miz
scheme MalformedSubstitution {
  P[set]
}:
  P[the set]
provided
  P[];
